# wearAnalyzer

./: CMakeLists.txt  CMakeLists.txt.txt  wearAnalyzer.pro
Include/: imgWidget.h  mainwindow.h
UIs/: mainwindow.ui
src/: imgWidget.cpp  mainwindow.cpp
